--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ ol {
 .search-form__fieldset {
   display: flex;
   flex-direction: column;
+  margin-top: -1px;
   gap: 5px;
   border: none;
 }
@@ -91,6 +92,7 @@ ol {
   width: 19px;
   height: 19px;
   border: 1px solid #fff;
+  appearance: none;
 }
 
 .search-form__checkbox:checked+.search-form__pseudo-checkbox::before {
@@ -107,7 +109,7 @@ ol {
   width: 15px;
   height: 15px;
   margin: auto;
-  background-color: #fff;
+  background-color: inherit;
 }
 
 .button {
@@ -120,6 +122,7 @@ ol {
   text-align: center;
   background-color: transparent;
   cursor: pointer;
+  font-family: 'Fira Sans Condensed';
 }
 
 .button:active {
@@ -198,7 +201,7 @@ ol {
   width: 399px;
   height: 298px;
   margin-top: 26px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .content__details {
@@ -239,6 +242,10 @@ ol {
 }
 
 .content__video-card-title {
+  max-width: 192px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;  
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   font-weight: bold;
@@ -247,10 +254,12 @@ ol {
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card-description-container {
-  flex: 1
+  flex: 1;
 }
 
 .content__card-link {
